Fix main image size issue on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,9 @@ pre {
   word-wrap: break-word;
   text-align: justify;
 }
+
+@media screen and (max-width: 600px) {
+  .image {
+    width: 100%;
+  }
+}
